--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  min-height: 100vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  overflow: scroll;
+}
+Nav {
+  z-index: 10;
+  transform: translate(-50%, -50%);
+  top: 5%;
+  left: 50%;
+  width: 100vw;
+  position: fixed;
+  display: flex;
+  justify-content: space-around;
+  min-height: 10vh;
+  color: rgb(255, 255, 255);
+  font-size: 25px;
+  font-weight: bolder;
+  background: linear-gradient(180deg, rgb(0, 0, 0) 10%, rgba(0, 0, 0, 0.555));
+  margin: 0;
+}
+.nav-links {
+  text-decoration: none;
+  display: flex;
+  flex-wrap: wrap;
+  position: sticky;
+  width: 80%;
+  justify-content: space-between;
+  list-style: none;
+  align-items: center;
+  text-align: center;
+  list-style-type: none;
+}
+li {
+  text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li:hover,
+li:focus {
+  background: -webkit-linear-gradient(
+    90deg,
+    rgb(255, 140, 0) 50%,
+    rgb(247, 247, 247) 50%
+  );
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
