--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,3 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  justify-content: center;
-  align-items: center;
-  overflow: scroll;
-}
 Nav {
   z-index: 10;
   transform: translate(-50%, -50%);
@@ -14,19 +6,18 @@ Nav {
   width: 100vw;
   position: fixed;
   display: flex;
-  justify-content: space-around;
-  min-height: 10vh;
+  justify-content: space-between;
+  min-height: 5vh;
   color: rgb(255, 255, 255);
   font-size: 25px;
   font-weight: bolder;
   background: linear-gradient(180deg, rgb(0, 0, 0) 10%, rgba(0, 0, 0, 0.555));
-  margin: 0;
 }
 .nav-links {
   text-decoration: none;
   display: flex;
   flex-wrap: wrap;
-  position: sticky;
+  position: fixed;
   width: 80%;
   justify-content: space-between;
   list-style: none;
