--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  overflow: scroll;
+}
+
 Nav {
   z-index: 10;
   transform: translate(-50%, -50%);
@@ -6,36 +15,44 @@ Nav {
   width: 100vw;
   position: fixed;
   display: flex;
-  justify-content: space-between;
-  min-height: 5vh;
+  justify-content: space-around;
+  min-height: 10vh;
   color: rgb(255, 255, 255);
   font-size: 25px;
   font-weight: bolder;
   background: linear-gradient(180deg, rgb(0, 0, 0) 10%, rgba(0, 0, 0, 0.555));
+  margin: 0;
 }
 .nav-links {
   text-decoration: none;
   display: flex;
-  flex-wrap: wrap;
-  position: fixed;
-  width: 80%;
+  position: sticky;
+  width: 40%;
   justify-content: space-between;
   list-style: none;
   align-items: center;
   text-align: center;
-  list-style-type: none;
 }
-li {
-  text-decoration: none;
+.home {
+  display: flex;
+  position: fixed;
+  text-align: center;
+  justify-content: space-between;
+  text-shadow: 0 0 10px black;
+  left: 5%;
+  top: 40%;
+  align-items: center;
 }
-
-li:hover,
-li:focus {
-  background: -webkit-linear-gradient(
-    90deg,
-    rgb(255, 140, 0) 50%,
-    rgb(247, 247, 247) 50%
-  );
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
+footer {
+  box-shadow: 0 0 20px rgb(0, 0, 0);
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
+  margin-top: auto;
+  color: rgb(255, 255, 255);
+  font-size: 25px;
+  font-weight: bolder;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.733) 10%, rgb(0, 0, 0));
+  height: 8vh;
+  position: sticky;
 }
