--- a/src/App.css
+++ b/src/App.css
@@ -27,8 +27,8 @@ Nav {
   text-decoration: none;
   display: flex;
   position: sticky;
-  width: 40%;
-  justify-content: space-between;
+  width: 90%;
+  justify-content: flex-end;
   list-style: none;
   align-items: center;
   text-align: center;
