--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,5 +1,5 @@
 .NavbarItems{
-    background: linear-gradient(90deg, rgb(10, 10, 14) 0%, rgb(8, 4, 85) 100%);
+    background: linear-gradient(90deg, rgb(8, 8, 8) 0%, rgb(245, 245, 252) 100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -45,6 +45,7 @@
 .menu-icon{
     display: none;
 }
+/* 
 @media screen and (max-width: 960px) {
     .NavbarItems{
         position: relative;
@@ -115,4 +116,4 @@
     Button{
         display:none;
     }
-}
+} */
