--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,51 +1,78 @@
-.NavbarItems{
-    background: linear-gradient(90deg, rgb(8, 8, 8) 0%, rgb(245, 245, 252) 100%);
-    height: 80px;
+.navbar{
+    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
-}
-.navbar-logo{
+    position: sticky;
+    top: 0;
+    z-index: 999;
+  }
+  
+  .navbar-container {
+    display: flex;
+    max-width: 1500px;
+    text-align: center;
+  }
+  
+  .navbar-logo {
     color: #fff;
     justify-self: start;
     margin-left: 20px;
     cursor: pointer;
-}
-.fa-react{
+    text-decoration: none;
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+  }
+  
+  .fa-typo3 {
     margin-left: 0.5rem;
-    font-size: 1.6rem;
-}
-.nav-menu{
+    font-size: 1.8rem;
+  }
+  
+  .nav-menu {
     display: grid;
-    grid-template-columns: repeat(5, auto);
-    grid-gap: 10px;
+    grid-template-columns: repeat(4, auto);
+    grid-gap: 30px;
     list-style: none;
     text-align: center;
-    width: 70vw;
-    justify-content:none;
+    width: 80vw;
+    justify-content:right;
     margin-right: 2rem;
-}
-.nav-links{
+  }
+  
+  .nav-item {
+    height: 80px;
+  }
+  
+  .nav-links {
     color: #fff;
+    display: flex;
+    align-items: center;
     text-decoration: none;
     padding: 0.5rem 1rem;
-}
-.nav-links:hover{
-    background-color:none;
-    border-radius: 4px;
+    height: 100%;
+  }
+  
+  .nav-links:hover {
+    border-bottom: 4px solid #fff;
     transition: all 0.2s ease-out;
-}
-.fa-bars{
-    color: rgb(231, 48, 2);
-}
-.nav-links-mobile{
+  }
+  
+  .fa-bars {
+    color: #fff;
+  }
+  
+  .nav-links-mobile {
     display: none;
-}
-.menu-icon{
+  }
+  
+  .menu-icon {
     display: none;
-}
-/* 
+  }
+
+/* }
 @media screen and (max-width: 960px) {
     .NavbarItems{
         position: relative;
