--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  overflow: scroll;
+  background-color: black;
+}
 .container {
   display: flex;
   flex-direction: column;
@@ -5,7 +10,7 @@
   justify-content: center;
   align-items: center;
   overflow: scroll;
-  background-color: rgba(0, 0, 0, 0.872);
+  background-color: rgb(77, 77, 77);
 }
 
 Nav {
