--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,4 +1,3 @@
-
 .NavbarItems {
   background: linear-gradient(90deg, rgb(10, 10, 14) 0%, rgb(8, 4, 85) 100%);
   height: 80px;
@@ -32,10 +31,10 @@
   text-decoration: none;
   padding: 0.5rem 1rem;
 }
-.nav-links:hover {
-  background-color: none;
-  border-radius: 4px;
+a:hover {
+  text-shadow: 0 5px 15px white;
   transition: all 0.2s ease-out;
+  filter: brightness(2);
 }
 .fa-bars {
   color: rgb(231, 48, 2);
@@ -115,79 +114,85 @@
   }
 }
 
-.navbar{
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    position: sticky;
-    top: 0;
-    z-index: 999;
-  }
-  
-  .navbar-container {
-    display: flex;
-    max-width: 1500px;
-    text-align: center;
-  }
-  
-  .navbar-logo {
-    color: #fff;
-    justify-self: start;
-    margin-left: 20px;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 2rem;
-    display: flex;
-    align-items: center;
-  }
-  
-  .fa-typo3 {
-    margin-left: 0.5rem;
-    font-size: 1.8rem;
-  }
-  
-  .nav-menu {
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-gap: 30px;
-    list-style: none;
-    text-align: center;
-    width: 80vw;
-    justify-content:right;
-    margin-right: 2rem;
-  }
-  
-  .nav-item {
-    height: 80px;
-  }
-  
-  .nav-links {
-    color: #fff;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    height: 100%;
-  }
-  
-  .nav-links:hover {
-    border-bottom: 4px solid #fff;
-    transition: all 0.2s ease-out;
-  }
-  
-  .fa-bars {
-    color: #fff;
-  }
-  
-  .nav-links-mobile {
-    display: none;
-  }
-  
-  .menu-icon {
-    display: none;
-  }
+.Navbar {
+  z-index: 10;
+  transform: translate(-50%, -50%);
+  top: 5%;
+  left: 50%;
+  width: 100vw;
+  position: fixed;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 10vh;
+  color: rgb(255, 255, 255);
+  font-size: 25px;
+  font-weight: bolder;
+  background: linear-gradient(
+    180deg,
+    rgb(0, 0, 0) 60%,
+    rgba(65, 64, 64, 0.945)
+  );
+  margin: 0;
+}
+
+.navbar-container {
+  display: flex;
+  width: 100vw;
+}
+
+.navbar-logo {
+  color: #fff;
+  justify-self: start;
+  margin-left: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+}
+
+.fa-typo3 {
+  margin-left: 0.5rem;
+  font-size: 1.8rem;
+}
+
+.nav-menu {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 30px;
+  list-style: none;
+  text-align: center;
+  width: 80vw;
+  justify-content: right;
+  margin-right: 2rem;
+}
+
+.nav-links {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  height: 100%;
+}
+
+.nav-links:hover {
+  border-bottom: 4px solid #fff;
+  transition: all 0.2s ease-out;
+}
+
+.fa-bars {
+  color: #fff;
+}
+
+.nav-links-mobile {
+  display: none;
+}
+
+.menu-icon {
+  display: none;
+}
 
 /* }
 @media screen and (max-width: 960px) {
@@ -261,4 +266,3 @@
         display:none;
     }
 } */
-
