--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,14 +1,17 @@
-.navbar{
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    position: sticky;
-    top: 0;
-    z-index: 999;
-  }
-  
+.Navbar {
+  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(245, 241, 241) 100%);
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
+.navbar-active{
+  background: transparent;
+}
   .navbar-container {
     display: flex;
     max-width: 1500px;
@@ -70,8 +73,7 @@
   
   .menu-icon {
     display: none;
-  }
-
+  } 
 /* }
 @media screen and (max-width: 960px) {
     .NavbarItems{
