--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,6 +1,6 @@
-.Navbar {
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(245, 241, 241) 100%);
-  height: 80px;
+.navbar {
+  /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(245, 241, 241) 100%); */
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,7 +10,7 @@
   z-index: 999;
 }
 .navbar-active{
-  background: transparent;
+  display: none;
 }
   .navbar-container {
     display: flex;
@@ -46,7 +46,7 @@
   }
   
   .nav-item {
-    height: 80px;
+    height: 200px;
   }
   
   .nav-links {
@@ -55,7 +55,8 @@
     align-items: center;
     text-decoration: none;
     padding: 0.5rem 1rem;
-    height: 100%;
+    height: 120%;
+    margin-top: 15px;
   }
   
   .nav-links:hover {
