pagination works needs offset to fix bug

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -45,7 +45,7 @@
 .menu-icon{
     display: none;
 }
-@media screen and (max-width: 960px) {
+/* @media screen and (max-width: 960px) {
     .NavbarItems{
         position: relative;
     }
@@ -115,4 +115,4 @@
     Button{
         display:none;
     }
-}
+} */
