--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,6 +1,6 @@
-
-.Navbar {
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(245, 241, 241) 100%);
+.navbar {
+  /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(245, 241, 241) 100%); */
+  background: black;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -10,47 +10,115 @@
   top: 0;
   z-index: 999;
 }
-.navbar-active{
-  background: transparent;
+.navbar.active{
+  background: none;
 }
-  .navbar-container {
-    display: flex;
-    max-width: 1500px;
-    text-align: center;
+
+.navbar-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  max-width: 1500px;
+}
+
+.navbar-logo {
+  color: #fff;
+  justify-self: start;
+  margin-left: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+}
+
+.nav-menu {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 10px;
+  list-style: none;
+  text-align: center;
+  width: 60vw;
+  justify-content: end;
+  margin-right: 2rem;
+}
+
+.nav-item {
+  height: 80px;
+}
+
+.nav-links {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  height: 100%;
+}
+
+.nav-links:hover {
+  border-bottom: 4px solid #fff;
+  transition: all 0.2s ease-out;
+}
+
+.fa-bars {
+  color: #fff;
+}
+
+.nav-links-mobile {
+  display: none;
+}
+
+.menu-icon {
+  display: none;
+}
+
+@media screen and (max-width: 960px) {
+  .NavbarItems {
+    position: relative;
   }
+
   .nav-menu {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 500px;
+    height: 90vh;
     position: absolute;
     top: 80px;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
   }
+
   .nav-menu.active {
-    background: #010218;
+    background: #242222;
     left: 0;
     opacity: 1;
     transition: all 0.5s ease;
+    z-index: 1;
   }
+
   .nav-links {
     text-align: center;
     padding: 2rem;
     width: 100%;
     display: table;
   }
+
   .nav-links:hover {
-    background-color: #0a19e2;
+    background-color: #fff;
+    color: #242424;
     border-radius: 0;
   }
+
   .navbar-logo {
     position: absolute;
     top: 0;
     left: 0;
     transform: translate(25%, 50%);
   }
+
   .menu-icon {
     display: block;
     position: absolute;
@@ -60,95 +128,30 @@
     font-size: 1.8rem;
     cursor: pointer;
   }
+
   .fa-times {
-    color: rgb(240, 10, 10);
+    color: #fff;
     font-size: 2rem;
   }
+
   .nav-links-mobile {
     display: block;
     text-align: center;
-    padding: 1.5rem;
     margin: 2rem auto;
     border-radius: 4px;
     width: 80%;
-    background: #3205fa;
     text-decoration: none;
-    color: rgb(105, 4, 4);
     font-size: 1.5rem;
+    background-color: transparent;
+    color: #fff;
+    padding: 14px 20px;
+    border: 1px solid #fff;
+    transition: all 0.3s ease-out;
   }
-  
-  .menu-icon {
-    display: none;
-  } 
-/* }
-@media screen and (max-width: 960px) {
-    .NavbarItems{
-        position: relative;
-    }
-    .nav-menu{
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: 500px;
-        position: absolute;
-        top: 80px;
-        left: -100%;
-        opacity: 1;
-        transition: all 0.5s ease;
-    }
-    .nav-menu.active{
-        background:#010218;
-        left: 0;
-        opacity: 1;
-        transition: all 0.5s ease;
-    }
-    .nav-links{
-        text-align: center;
-        padding: 2rem;
-        width: 100%;
-        display: table;
-    }
-    .nav-links:hover{
-        background-color: #0a19e2;
-        border-radius: 0;
-    }
-    .navbar-logo{
-        position: absolute;
-        top: 0;
-        left: 0;
-        transform: translate(25%, 50%);
-    }
-    .menu-icon{
-        display: block;
-        position: absolute;
-        top: 0;
-        right: 0;
-        transform: translate(-100%, 60%);
-        font-size: 1.8rem;
-        cursor: pointer;
-    }
-    .fa-times{
-        color: rgb(240, 10, 10);
-        font-size: 2rem;
-    }
-    .nav-links-mobile{
-        display: block;
-        text-align: center;
-        padding: 1.5rem;
-        margin: 2rem auto;
-        border-radius: 4px;
-        width: 80%;
-        background: #3205fa;
-        text-decoration: none;
-        color: rgb(105, 4, 4);
-        font-size: 1.5rem;
-    }
-    .nav-links-mobile:hover{
-        background-color: #fff;
-        color: #020631;
-        transition: 250ms;
-    }
-    Button{
-        display:none;
-    }
-} */
+
+  .nav-links-mobile:hover {
+    background: #fff;
+    color: #242424;
+    transition: 250ms;
+  }
+}
