--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -22,26 +22,14 @@
   max-width: 1500px;
 }
 
-.navbar-logo {
-  color: #fff;
-  justify-self: start;
-  margin-left: 20px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 2rem;
-  display: flex;
-  align-items: center;
-}
-
 .nav-menu {
   display: grid;
   grid-template-columns: repeat(4, auto);
-  grid-gap: 10px;
+  grid-gap: 200px;
   list-style: none;
   text-align: center;
   width: 60vw;
   justify-content: end;
-  margin-right: 2rem;
 }
 
 .nav-item {
@@ -53,15 +41,26 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  padding: 0.5rem 1rem;
+  padding: 0rem 1rem;
   height: 100%;
 }
-
+.nav-links-cart{
+  color:orangered;
+  font-size: 3rem;;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 0rem 1rem;
+  height: 100%;
+}
 .nav-links:hover {
-  border-bottom: 4px solid #fff;
+  border-bottom: 2px solid #fff;
   transition: all 0.2s ease-out;
 }
-
+.nav-links-cart:hover {
+  border-bottom: 2px solid #fff;
+  transition: all 0.2s ease-out;
+}
 .fa-bars {
   color: #fff;
 }
@@ -105,18 +104,19 @@
     width: 100%;
     display: table;
   }
+  .nav-links-cart{
+    color:orangered;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    padding: 0rem 1rem;
+    height: 100%;
+  }
 
   .nav-links:hover {
     background-color: #fff;
     color: #242424;
     border-radius: 0;
-  }
-
-  .navbar-logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(25%, 50%);
   }
 
   .menu-icon {
@@ -153,5 +153,9 @@
     background: #fff;
     color: #242424;
     transition: 250ms;
+  }
+  .nav-links-cart:hover {
+    border-bottom: 2px solid #fff;
+    transition: all 0.2s ease-out;
   }
 }
