--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,9 +1,10 @@
 .footer-container {
   background-color: #000000;
-  padding: 3rem 0 2rem 0;
+  padding: 0rem 0 1rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  min-height: 18vh;
   align-items: center;
   box-shadow: 20px 20px 20px rgb(255, 255, 255);
 }
@@ -16,7 +17,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 16px;
+  margin: 0;
   text-align: left;
   width: 160px;
   box-sizing: border-box;
