--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,16 +1,22 @@
 .navbar {
   /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(245, 241, 241) 100%); */
   background: black;
-  height: 80px;
+  min-height: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
   position: sticky;
   top: 0;
+  transform: translate(-50%, -50%);
+  top: 5%;
+  left: 50%;
+  width: 100vw;
+  position: fixed;
+
   z-index: 999;
 }
-.navbar.active{
+.navbar.active {
   background: none;
 }
 
@@ -25,7 +31,7 @@
 .nav-menu {
   display: grid;
   grid-template-columns: repeat(4, auto);
-  grid-gap: 200px;
+  grid-gap: 250px;
   list-style: none;
   text-align: center;
   width: 60vw;
@@ -44,9 +50,9 @@
   padding: 0rem 1rem;
   height: 100%;
 }
-.nav-links-cart{
-  color:orangered;
-  font-size: 3rem;;
+.nav-links-cart {
+  color: rgb(255, 0, 0);
+  font-size: 3rem;
   display: flex;
   align-items: center;
   text-decoration: none;
