--- a/src/components/ProductPages/Card.css
+++ b/src/components/ProductPages/Card.css
@@ -1,25 +1,45 @@
-
 .container-card {
-    height: 150px;
-    width: 50px;
-    border: 4px solid black;
+  height: 40%;
+  width: 30%;
+  box-shadow: 0 8px 25px black;
+  border-radius: 8px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .card-img-container {
-    width: 100%;
-    height: 50%;
+  width: 100%;
+  height: 50%;
 }
 
 img {
-    
   height: 100%;
   width: 100%;
-  border: 2px rgb(77, 77, 77) solid;
-  
-  box-shadow: 0 0 12px black;
+
   z-index: 3;
 }
+.weights-title .info {
+  z-index: 2;
+  height: 70%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  text-align: center;
 
+  text-transform: uppercase;
+}
+.Product-name,
+.Product-weight,
+.Product-price {
+  z-index: 2;
+  font-size: 20px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
 /* margin: 60px;
   height: 200px;
   width: 200px;
