--- a/src/components/ProductPages/CardContainer.css
+++ b/src/components/ProductPages/CardContainer.css
@@ -1,10 +1,24 @@
-
+@import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
+.title {
+  font-size: 3em;
+  color: aliceblue;
+  font-family: "Staatliches", cursive;
+  text-shadow: 0 0 25px black, 0 0 20px orangered;
+  justify-content: center;
+  text-align: center;
+  margin-top: 100px;
+}
 .container-cardcontainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    width: 60%;
-    height: 70vh;
-    margin: 0 auto;
-    border: 4px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 10px;
+  justify-content: space-evenly;
+  width: 80vw;
+  height: 55vh;
+  align-items: center;
+  padding: 20px;
+  padding-bottom: 7%;
+  margin: auto;
+  background: rgb(255, 255, 255);
+  border-radius: 20px;
 }
