--- a/src/components/ProductPages/Card.css
+++ b/src/components/ProductPages/Card.css
@@ -1,25 +1,27 @@
 .container-card {
-  height: 40%;
-  width: 30%;
+  height: 50%;
+  width: 40%;
   box-shadow: 0 8px 25px black;
   border-radius: 8px;
   padding-bottom: 20px;
   margin-bottom: 20px;
   margin-top: 20px;
+  background-color: black;
+  position: relative;
 }
 
 .card-img-container {
   width: 100%;
-  height: 50%;
+  height: 80%;
 }
 
 img {
   height: 100%;
   width: 100%;
-
+  border-radius: 8px;
   z-index: 3;
 }
-.weights-title .info {
+.weights-title {
   z-index: 2;
   height: 70%;
   position: relative;
@@ -29,17 +31,30 @@ img {
   flex-wrap: wrap;
   align-items: center;
   text-align: center;
-
   text-transform: uppercase;
+}
+.info {
+  margin: 12px;
+
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  text-align: center;
 }
 .Product-name,
 .Product-weight,
 .Product-price {
   z-index: 2;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 600;
+
   text-transform: uppercase;
+  color: white;
 }
+
 /* margin: 60px;
   height: 200px;
   width: 200px;
@@ -47,3 +62,30 @@ img {
   border-radius: 25px;
   box-shadow: 0 0 12px black;
   z-index: 3; */
+.add-basket {
+  z-index: 2;
+  position: absolute;
+  font-size: 15px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.644);
+  opacity: 0;
+}
+.basket-btn {
+  position: absolute;
+  top: 30%;
+  transform: rotate(-40deg);
+}
+.add-basket:hover {
+  opacity: 1;
+  transition: ease 0.7;
+  cursor: pointer;
+}
