--- a/src/components/ProductPages/CardContainer.css
+++ b/src/components/ProductPages/CardContainer.css
@@ -34,7 +34,7 @@
   width: 85vw;
   border-radius: 8px;
   margin-bottom: 40%;
-  background-image: url(../images/texture.jpeg);
+  background-image: url(../images/concrete.jpeg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
