--- a/src/components/ProductPages/Card.css
+++ b/src/components/ProductPages/Card.css
@@ -6,7 +6,7 @@
   padding-bottom: 20px;
   margin-bottom: 20px;
   margin-top: 20px;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   position: relative;
 }
 
@@ -55,13 +55,6 @@ img {
   color: white;
 }
 
-/* margin: 60px;
-  height: 200px;
-  width: 200px;
-  border: 2px rgb(77, 77, 77) solid;
-  border-radius: 25px;
-  box-shadow: 0 0 12px black;
-  z-index: 3; */
 .add-basket {
   z-index: 2;
   position: absolute;
