--- a/src/components/ProductPages/Card.css
+++ b/src/components/ProductPages/Card.css
@@ -6,7 +6,8 @@
   padding-bottom: 20px;
   margin-bottom: 20px;
   margin-top: 20px;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(119, 119, 119);
+  box-shadow: 0 0 15px rgba(134, 134, 134, 0.329);
   position: relative;
 }
 
@@ -52,7 +53,7 @@ img {
   font-weight: 600;
 
   text-transform: uppercase;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .add-basket {
@@ -74,8 +75,10 @@ img {
 }
 .basket-btn {
   position: absolute;
-  top: 30%;
+  left: 42%;
+  top: -20%;
   transform: rotate(-40deg);
+  font-size: 150px;
 }
 .add-basket:hover {
   opacity: 1;
