--- a/src/components/ProductPages/Card.css
+++ b/src/components/ProductPages/Card.css
@@ -1,14 +1,15 @@
 .container-card {
   height: 50%;
-  width: 40%;
+  width: 30%;
   box-shadow: 0 8px 25px black;
   border-radius: 8px;
   padding-bottom: 20px;
-  margin-bottom: 20px;
+
   margin-top: 20px;
   background-color: rgb(119, 119, 119);
   box-shadow: 0 0 15px rgba(134, 134, 134, 0.329);
   position: relative;
+  border: 1px red solid;
 }
 
 .card-img-container {
