--- a/src/components/ProductPages/CardContainer.css
+++ b/src/components/ProductPages/CardContainer.css
@@ -18,7 +18,7 @@
   height: 55vh;
   align-items: center;
   padding: 20px;
-  padding-bottom: 7%;
+  border: solid red 1px;
   margin: auto;
   border-radius: 20px;
   gap: 40px;
