--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -13,7 +13,7 @@
   left: 50%;
   width: 100vw;
   position: fixed;
-  box-shadow: 0 -20px 50px orangered;
+  box-shadow: 0 -20px 50px rgb(0, 162, 255);
   z-index: 999;
 }
 .navbar.active {
@@ -51,7 +51,7 @@
   height: 100%;
 }
 .nav-links-cart {
-  color: rgb(255, 0, 0);
+  color: rgb(0, 162, 255);
   font-size: 3rem;
   display: flex;
   align-items: center;
