--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,10 +1,46 @@
 .register-Content {
   z-index: 2;
-  width: 1200px;
+  width: 90vw;
+  flex-direction: column;
+  justify-content: space-between;
+  display: flex;
   box-shadow: 0 5px 10px 0 rgba(83, 83, 83, 0.315), 0 7px 10px 0 rgb(97, 97, 97);
   position: relative;
   border-radius: 10px;
   height: 60vh;
-  display: flex;
   background-color: white;
+  border: black 1px solid;
+}
+.register-img {
+  flex-wrap: wrap;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  justify-content: space-between;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background: url("../images/signup.jpeg");
+  background-position: 80%;
+  background-repeat: no-repeat;
+  background-size: fill;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  width: 50%;
+  align-items: center;
+  border: black 1px solid;
+  text-align: center;
+}
+.register-inputs {
+  width: 50%;
+}
+.register-input {
+  margin-left: 10px;
 }
