--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -95,9 +95,10 @@ a {
 }
 .three {
   text-transform: rotate(-45deg);
-  color: rgb(0, 0, 0);
+  color: rgb(0, 149, 248);
   font-size: 5rem;
-  text-shadow: 0 0 5px rgb(255, 255, 255);
+  text-shadow: 4px 0px 1px rgb(255, 255, 255);
+  -webkit-text-stroke: 1px black;
 }
 .sub {
   position: relative;
@@ -106,6 +107,6 @@ a {
   bottom: 20%;
   font-size: 4rem;
   color: rgb(0, 0, 0);
-  text-shadow: 0 0 5px rgb(255, 255, 255);
+  text-shadow: 0 0 9px rgb(255, 255, 255);
   font-family: "Prompt", sans-serif;
 }
