--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;1,200;1,400&family=Roboto:wght@100;300&display=swap');
+
 .navbar {
   /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(245, 241, 241) 100%); */
   background: black;
@@ -43,6 +46,7 @@
 }
 
 .nav-links {
+  font-family: 'Roboto', sans-serif; 
   color: #fff;
   display: flex;
   align-items: center;
