--- a/src/components/ProductPages/Access.css
+++ b/src/components/ProductPages/Access.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;1,200;1,400&family=Roboto:wght@100;300&display=swap');
+
 .A-img-container {
   display: flex;
   position: relative;
@@ -47,4 +50,9 @@
   color: rgb(15, 195, 6);
   font-size: 3rem;
   -webkit-text-stroke: 0;
+}
+
+.page-button {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
 }
