--- a/src/components/ProductPages/Calisthenics.css
+++ b/src/components/ProductPages/Calisthenics.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;1,200;1,400&family=Roboto:wght@100;300&display=swap');
+
 .C-img-container {
   display: flex;
   position: relative;
@@ -40,4 +43,9 @@
   font-size: 4rem;
   color: rgb(255, 255, 255);
   -webkit-text-stroke: 1px black;
+}
+
+.page-button {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
 }
