--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -87,12 +87,10 @@
   width: 50%;
   display: flex; 
   justify-content: space-evenly;
-  /* border: 1px solid red; */
 }
 
 .register-label {
   width: 30%;
-  /* border: 1px solid green; */
   text-align: left;
   /* margin-left: 2em; */
   font-family: 'Roboto', sans-serif;
@@ -101,7 +99,6 @@
 
 .register-input {
   /* margin-left: 10px; */
-  /* border: 1px solid gold; */
   text-align: center;
 }
 
@@ -124,4 +121,53 @@
   color: red;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
+}
+
+.register-success-content {
+  /* z-index: 2; */
+  width: 90vw;
+  /* flex-direction: column; */
+  /* justify-content: space-between; */
+  display: flex;
+  box-shadow: 0 5px 10px 0 rgba(83, 83, 83, 0.315), 0 7px 10px 0 rgb(97, 97, 97);
+  position: relative;
+  border-radius: 10px;
+  height: 60vh;
+  background-color: rgb(15, 13, 13);
+  border: black 1px solid;
+}
+
+.success-img {
+  flex-wrap: wrap;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  justify-content: space-between;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background: url("../images/success.jpg");
+  background-position: 80%;
+  background-repeat: no-repeat;
+  background-size: fill;
+}
+
+.success-title-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+
+.close-btn {
+  color: rgb(245, 240, 240);
+}
+
+.register-success-title {
+  color: rgb(245, 240, 240);
+  font-family: 'Poppins', sans-serif;
+  margin-top: 55%;
 }
